Geodata parameters (#156)
 new free form query parameters for geodata route
